third_party/move/move-compiler-v2/tests/checking/typing/mutate_invalid.exp

Diagnostics:
error: cannot assign `&mut bool` to left-hand side of type `&mut integer`
  ┌─ tests/checking/typing/mutate_invalid.move:6:10
  │
6 │         *&mut 0 = false;
  │          ^^^^^^

error: cannot assign `&mut &integer` to left-hand side of type `&mut u64`
  ┌─ tests/checking/typing/mutate_invalid.move:7:10
  │
7 │         *&mut S{f:0}.f = &1;
  │          ^^^^^^^^^^^^^

error: cannot assign `&mut (integer, integer)` to left-hand side of type `&mut u64`
  ┌─ tests/checking/typing/mutate_invalid.move:8:10
  │
8 │         *foo(&mut 0) = (1, 0);
  │          ^^^^^^^^^^^

error: expected expression with no value but found `u64`
  ┌─ tests/checking/typing/mutate_invalid.move:9:9
  │
9 │         bar(&mut S{f:0}).f = ();
  │         ^^^^^^^^^^^^^^^^^^

error: cannot assign `&mut &integer` to left-hand side of type `&mut u64`
   ┌─ tests/checking/typing/mutate_invalid.move:10:10
   │
10 │         *&mut bar(&mut S{f:0}).f = &0;
   │          ^^^^^^^^^^^^^^^^^^^^^^^

error: expected `bool` but found a value of type `u64`
   ┌─ tests/checking/typing/mutate_invalid.move:11:9
   │
11 │         baz().f = false;
   │         ^^^^^^^

error: cannot assign `&mut bool` to left-hand side of type `&mut u64`
   ┌─ tests/checking/typing/mutate_invalid.move:12:10
   │
12 │         *&mut baz().f = false;
   │          ^^^^^^^^^^^^

error: cannot assign `&mut X` to left-hand side of type `&mut S`
   ┌─ tests/checking/typing/mutate_invalid.move:17:10
   │
17 │         *r = X { f: 1 };
   │          ^

error: expected `&integer` but found a value of type `u64`
   ┌─ tests/checking/typing/mutate_invalid.move:19:9
   │
19 │         r.f = &0;
   │         ^^^

error: cannot assign `&mut ()` to left-hand side of type `&mut u64`
   ┌─ tests/checking/typing/mutate_invalid.move:20:10
   │
20 │         *&mut r.f = ();
   │          ^^^^^^^^
